<?xml version="1.0"?>
<package>
  <name>robo_ctrller</name>
  <version>0.0.0</version>
  <description>The robo_ctrller package</description>
  <maintainer email="guilinhai950419@gmail.com">guilinhai</maintainer>

  <license>CLOSED</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>



</package>

